--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -22,7 +22,12 @@ body {
     width: 100%;
 }
 
+@media only screen and (max-width: 950px) {
+    main {
+        z-index: 99999;
+    }
 
+}
 
 
 
@@ -187,7 +192,6 @@ body {
         display: none;
         display: flex;
         flex-direction: column;  
-        height: 100vh;
         width: 100%;
     }
 
@@ -359,20 +363,6 @@ body {
  }
 
 
- .post_title {
-    align-self: center;
-    text-align: center;
-}
-
-
-.post_link {
-    color: #fff;
-    text-decoration: none;
-}
-
-
-
-
 /* Destination Section Styles  ---------------- */
 
 .destination_section {
@@ -408,6 +398,8 @@ body {
 .destination_title {
     font-size: 1.8em;
     text-shadow: -2px 2px 2px #111;
+    align-self: center;
+    text-align: center;
 }
 
 .destination_one {
@@ -595,7 +587,7 @@ body {
 
 .activities_section {
     background-color: #fff;
-    margin: 7% 17% 7%;
+    margin: 7% 17% 10%;
 }
 
 .activities_wrapper {
@@ -624,6 +616,8 @@ body {
 .activity_title {
     padding: 12% 10%;
     text-shadow: -2px 2px 2px #000;
+    align-self: center;
+    text-align: center;
 }
 
 .activity_one {
@@ -753,37 +747,24 @@ body {
         grid-column: 1 / 2;
         grid-row: 5 / 6;
     }
-
-    .activity_six {
-        height: 400px;
-        grid-column: 1 / 2;
-        grid-row: 6 / 7;
-    }
-
-    .activity_seven {
-        height: 400px;
-        grid-column: 1 / 2;
-        grid-row: 8 / 9;
-    }
-
 }
 
 
-/* Activities Section Styles  ---------------- */
+/* Restaurants Section Styles  ---------------- */
 
-.activities_section {
+.restaurants_section {
     background-color: #fff;
-    margin: 7% 17% 7%;
+    margin: 7% 17% 10%;
 }
 
-.activities_wrapper {
+.restaurants_wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 333px 333px;
     justify-content: center;
 }
 
-.activity_link {
+.restaurant_link {
     color: #fff;
     text-decoration: none;
     height: 317px;
@@ -794,17 +775,18 @@ body {
     transition: .2s ease-in-out;
 }
 
-.activities_post:hover {
+.restaurant_link:hover {
     transform: scale(1.02);
     transition: .2s ease-in-out;
 }
 
-.activity_title {
-    padding: 12% 10%;
+.restaurant_title {
     text-shadow: -2px 2px 2px #000;
+    align-self: center;
+    text-align: center;
 }
 
-.activity_one {
+.restaurant_one {
     grid-column: 3 / 6;
     grid-row: 1 / 3;
     height: 650px;
@@ -818,7 +800,7 @@ body {
     background-size: cover;
 }
 
-.activity_two {
+.restaurant_two {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     background: url(../images/activities/activity2.jpg);
@@ -827,21 +809,21 @@ body {
     background-size: cover;
 }
 
-.activity_three {
+.restaurant_three {
     background: url(../images/activities/activity3.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.activity_four {
+.restaurant_four {
     background: url(../images/activities/activity4.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.activity_five {
+.restaurant_five {
     background: url(../images/activities/activity5.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -849,99 +831,87 @@ body {
 }
 
 @media only screen and (max-width: 1760px) {
-    .activities_section {
+    .restaurants_section {
         margin: 7% 10% 10%;
     }
 }
 
 
 @media only screen and (max-width: 1330px) {
-    .activities_wrapper {
+    .restaurants_wrapper {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-template-rows: 1fr 330px 330px;
         justify-content: center;
     }
 
-    .activity_link {
+    .restaurant_link {
         max-width: none;
     }
 
-    .activity_one {
+    .restaurant_one {
         grid-column: 1 / 5;
         grid-row: 1 / 2;
         height: inherit;
     }   
 
-    .activity_two {
+    .restaurant_two {
         grid-column: 1 / 3;
         grid-row: 2 / 4;
     }
 
-    .activity_three {
+    .restaurant_three {
         grid-column: 3 / 5;
         grid-row: 2 / 4;
     }
 
-    .activity_four {
+    .restaurant_four {
         grid-column: 1 / 3;
         grid-row: 3 / 4;
     }
 
-    .activity_five {
+    .restaurant_five {
         grid-column: 3 / 5;
         grid-row: 3 / 5;
     }
 }
 
 @media only screen and (max-width: 900px) {
-    .activities_wrapper {
+    .restaurants_wrapper {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, 420px);
         justify-content: center;
     }
     
-    .activity_one {
+    .restaurant_one {
         height: 400px;
         grid-column: 1 / 2;
         grid-row: 1 / 2;
     }   
 
-    .activity_two {
+    .restaurant_two {
         height: 400px;
         grid-column: 1 / 2;
         grid-row: 2 / 3;
     }
 
-    .activity_three {
+    .restaurant_three {
         height: 400px;
         grid-column: 1 / 2;
         grid-row: 3 / 4;
     }
 
-    .activity_four {
+    .restaurant_four {
         height: 400px;
         grid-column: 1 / 2;
         grid-row: 4 / 5;
     }
 
-    .activity_five {
+    .restaurant_five {
         height: 400px;
         grid-column: 1 / 2;
         grid-row: 5 / 6;
-    }
-
-    .activity_six {
-        height: 400px;
-        grid-column: 1 / 2;
-        grid-row: 6 / 7;
-    }
-
-    .activity_seven {
-        height: 400px;
-        grid-column: 1 / 2;
-        grid-row: 8 / 9;
     }
 
 }
@@ -994,6 +964,13 @@ body {
     .divider_section {
         height: 450px;
     }
+}
+
+@media only screen and (max-width: 900px) {
+ .divider_section {
+     display: none;
+ }
+
 }
 /* contact section Styles  ---------------- */
 
